components/home/_homeStyle.scss
.flex-container {
	padding-top: 20px;
	padding-bottom: 20px;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	.border {
		margin: 2rem;
		
	}
}

.flex-column{
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	text-align: center;
}

.flex-item {
	flex: 1;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	flex-wrap: wrap;
	background-color: white;
	margin: 2rem;
	.cardItem {
		background-color: transparent;
		border: 0;
	}
	img {
		max-width: 200px;
	}
	&.border{
		border: 1px solid rgba(0, 0, 0, 0.1);
		border-radius: 2px;
		max-width: 230px;
    padding: 10px;
		&:hover{
			transform: translateY(-2px);
			box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
		}
	}
}

.panels {
	min-height: 80vh;
	padding-top: 20px;
	overflow: hidden;
	display: flex;
	flex-wrap: wrap;
}

.panel {
	//	background: #6B0F9C;
	box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
	color: white;
	text-align: center;
	align-items: center;
	/* Safari transitionend event.propertyName === flex */
	/* Chrome + FF transitionend event.propertyName === flex-grow */
	transition: font-size 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), flex 0.7s cubic-bezier(0.61, -0.19, 0.7, -0.11), background 0.2s;
	font-size: 20px;
	background-size: cover;
	background-position: center;
	flex: 1;
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;
	> * {
		margin: 0;
		width: 100%;
		transition: transform 0.5s;
		//		border: 1px solid red;
		flex: 1 0 auto;
		display: flex;
		justify-content: center;
		align-items: center;
		&:first-child {
			transform: translateY(-100%)
		}
		&:last-child {
			transform: translateY(100%)
		}
	}
	&.open-active {
		> * {
			&:first-child {
				transform: translateY(0);
				display: flex;
			}
			&:last-child {
				transform: translateY(0);
				display: flex;
			}
		}
	}
	&.open {
		font-size: 2em;
		flex: 5;
		box-shadow: inset 0 0 0 5px rgba(255, 255, 255, 0.1);
	}
	&.panel1 {
		background-image: url(../img/panel1.jpg);
	}
	&.panel2 {
		background-image: url(../img/panel2.jpg);
	}
	&.panel3 {
		background-image: url(../img/panel3.jpg);
	}
	&.panel4 {
		background-image: url(../img/panel4.jpg);
	}
	&.panel5 {
		background-image: url(../img/panel5.jpg);
	}
	p {
		text-transform: uppercase;
		font-family: $font-header;
		text-shadow: 0 0 4px rgba(0, 0, 0, 0.72), 0 0 14px rgba(0, 0, 0, 0.45);
		font-size: 2em;
		font-weight: 700;
		cursor: pointer;
		&:nth-child(2) {
			font-size: 4em;
		}
	}
}

@media(max-width: 768px) {
	.panels{
		flex-direction: column;
	}
	.panel {
		> * {
			&:first-child {
				transform: translateY(-100%);
				display: none;
			}
			&:last-child {
				transform: translateY(100%);
				display: none;
			}
		}
	}
}

.cta {
	color: white;
	text-decoration: none;
}

.slide-in {
	opacity: 0;
	//	transition: all .5s;
	transform: translateX(-30%) scale(1);
	&.a {
		transition: all .2s;
	}
	&.b {
		transition: all .4s;
	}
	&.c {
		transition: all 0.6s;
	}
	&.d {
		transition: all 0.8s;
	}
	&.e {
		transition: all 1.0s;
	}
	&.open {
		transition: all 0.5s !important;
	}
}

.slide-in.active {
	opacity: 1;
	transform: translateX(0%) scale(1);
	border: 0px;
	&:hover {
		transform: scale(1.05);
		z-index: 100;
	}
}

//.homeHeader {
//	background-image: url('../img/home-bg.jpg');
//	background-position: center;
//}
//
.projectHeader {
//	background-image: url('../img/1.jpg');
	background-position: center;
	height: 108px;
	width: 100%;
}

.gradientHeader {
	background-image: url('../img/gradient.jpg');
	background-position: center;
}

.photoBoothHeader {
	background-image: url('../img/photoBooth.jpg');
	background-position: center;
}

.moleGameHeader {
		background-image: url('../img/mole-game.jpg');
		background-position: bottom;
	}

.cardView {
	.container {
		padding: 6rem;
		background-color: white;
		border: 1px solid #cccccc;
		border-radius: 2px;
		transition: 0.3s ease-in-out;
		&:hover {
			//			transform: translateY(-2px);
			box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
		}
	}
	.hover {
		margin-bottom: 5rem;
		&:hover {
			transform: translateY(-2px);
		}
	}
}

.cardItem {
	background-color: rgba(250, 250, 250, 1);
	border: 1px solid rgba(0, 0, 0, 0.1);
	border-radius: 2px;
	transition: 0.3s ease-in-out;
	&:hover {
		transform: translateY(-2px);
		box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.2);
	}
}

@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,500|Lato');
//colors
$primary: rgba(18%,67%,98%,0.75),rgba(18%,67%,98%,0.85);
$accent: #65ce9b;
$neutral-white: #ffffff;
$neutral-gray: #333333;
//fonts
$primary-font: "Lato";
$secondary-font: "Open Sans";
$large-font-size: 68px;
$small-font-size: 24px;
$extra-small-font-size: 16px;
$mobile-large-font-size: 38px;
$mobile-small-font-size: 8px;
$mobile-extra-small-font-size: 6px;
$thick-font-weight: 500;
$medium-font-weight: 300;
$uppercase-transform: uppercase;
//shapes
$triangle: polygon(50% 43%,0% 100%,100% 100%);

.icon {
	margin-right: 10px;
	color: white;
}

.icon-one {
	position: absolute;
	bottom: 27%;
	left: 20%;
	margin-top: 40px;
	color: $neutral-white;
	margin-right: 10px;
}

.icon-two {
	position: absolute;
	bottom: 27%;
	left: 48%;
	margin-top: 40px;
	color: $neutral-white;
	margin-right: 10px;
}

.icon-three {
	position: absolute;
	bottom: 27%;
	right: 20%;
	margin-top: 40px;
	color: $neutral-white;
	margin-right: 10px;
}

#scale:hover {
	-moz-transform: scale(1.1);
	-webkit-transform: scale(1.1);
	transform: scale(1.1);
}

.intro-header {
	display: flex;
	flex-direction: column;
	padding-top: 0px;
	padding-bottom: 20px;
	text-align: center;
	height: 100vh;
	background: linear-gradient($primary), url("../img/body-bg.png") no-repeat center center;
	background-size: cover;
}

//.bottom-triangle {
//	position: absolute;
//	bottom: -10%;
//	left: 0;
//	height: 30%;
//	width: 100%;
//	background: #65ce9b;
//	/* -webkit-clip-path: polygon(50% 43%, 0% 100%, 100% 100%); */
//	clip-path: polygon(50% 74%, 20% 0%, 80% 0%);
//}
.intro-message {
	position: relative;
	padding-top: 20%;
	padding-bottom: 20%;
}

.intro-message > h1 {
	color: $neutral-white;
	font-weight: 100;
	font-size: $large-font-size;
	font-family: $primary-font;
}

.intro-message > h3 {
	color: $neutral-white;
	font-size: $small-font-size;
	font-family: $secondary-font;
	margin-top: 20px;
	padding-bottom: 40px;
}

.content-section-a {
	padding: 50px 0;
	background: $accent;
}

.content-section-b {
//	padding-top: 0px;
//	padding-bottom: 0px;
	background: linear-gradient($primary);
	text-align: center;
}

.content-section-c {
//	padding: 50px 0;
//	padding-bottom: 50px;
	background: $neutral-white;
	text-align: center;
	.btn-circle {
		border: 2px solid #424242;
	}
	
	.fa-angle-double-down {
		color: #424242;
	}
	
	.cardView {
	
		.container{
			border: 0px;
		}
	}
}

.content-section-d {
	padding: 50px 0;
	background: $accent;
	text-align: center;
	color: $neutral-white;
}

.more{
	color: white;
	h3{
		padding: 1rem;
	}
}

.btn-project{
	background-color: $accent;
//	width: 200px;
	height: 50px;
	color: white;
	border: 3px solid white;
	a{
		color: white;
		font-weight: 700;
    font-size: 2rem;
    padding: 20px;
		&:hover{
			color: white;
			text-decoration: none;
		}
	}
}

//mobile responsive
@media all and (max-width: 720px) {
	.intro-message > h1 {
		color: $neutral-white;
		font-weight: 100;
		font-size: $mobile-large-font-size;
		font-family: $primary-font;
	}
	.icon-one {
		position: absolute;
		bottom: 10%;
		left: 18%;
		margin-top: 40px;
		color: $neutral-white;
		margin-right: 10px;
	}
	.icon-two {
		position: absolute;
		bottom: 10%;
		left: 44%;
		margin-top: 40px;
		color: $neutral-white;
		margin-right: 10px;
	}
	.icon-three {
		position: absolute;
		bottom: 10%;
		right: 18%;
		margin-top: 40px;
		color: $neutral-white;
		margin-right: 10px;
	}
}

